# iregul-proxy

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  TESTING.md  docker-compose.yml  pyproject.toml  requirements.txt  run_proxy.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml
iregul_proxy/: __init__.py  api.py  config.py  main.py  proxy.py
tests/: __init__.py  test_config.py  test_imports.py  test_proxy_shutdown.py
