[project]
name = "iregul-proxy"
version = "0.1.0"
description = "Serveur proxy local pour les pompes à chaleur basé sur le système iregul"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "PoppyPop" }
]
dependencies = [
    "aioiregul>=0.2.5",
    "aiohttp>=3.13.3",
    "python-dotenv>=1.0.0",
]

[project.scripts]
iregul-proxy = "iregul_proxy.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["iregul_proxy"]

[dependency-groups]
dev = []


